# ai-agent

./: CoT_verification_answers.md  CoT_verification_answers_0.md  README.md  package.json  pyproject.toml  settings.json
data/: architect_courses.json  architect_glossary.json  book.txt
src/ai_agent/: CoT.py  __init__.py  agent.py  llm.py  main.py  prompts.py  read_book.py  tools.py  utils.py
